--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     wearApp project(':wear')
     implementation 'com.google.android.gms:play-services-wearable:+'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
