--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     wearApp project(':wear')
     implementation 'com.google.android.gms:play-services-wearable:11.8.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'commons-validator:commons-validator:1.4.1'
 }
