--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -25,16 +25,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'de.hdodenhof:circleimageview:1.3.0'
+    implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-wearable:11.8.0'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support:support-vector-drawable:27.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     wearApp project(':wear')
-    implementation 'com.google.android.gms:play-services-wearable:11.8.0'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
