--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:11.8.0'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support:support-vector-drawable:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.makeramen:roundedimageview:2.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
