--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
         android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version" />
     -->
+    <!-- Quitar hardwareAccelerator -->
     <application
         android:debuggable="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
